// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List editor Level component 1`] = `
<ul
  style={
    Object {
      "listStyleType": "square",
    }
  }
/>
`;

exports[`List editor Level component ordered 1`] = `
<ol
  style={
    Object {
      "listStyleType": "alpha",
    }
  }
/>
`;
